--- a/static/saved_sentences.css
+++ b/static/saved_sentences.css
@@ -58,5 +58,17 @@ ul {
   font-size: 2.0rem;
   color: #ccc;
   text-align: center;
-  /* margin-top: 10rem; */
+  margin-top: 2rem;
 }
+
+.sentence-item {
+  padding: 20px;
+  margin-bottom: 20px;
+  background-color: #111;
+  border: 2px solid #00ffff;
+  border-radius: 10px;
+  box-shadow: 0 0 10px #00ffff50;
+  color: var(--text_main);
+  text-align: left;
+}
+
