--- a/templates/API.html
+++ b/templates/API.html
@@ -73,7 +73,7 @@
           <button type="submit" class="play-sound00 button">保存</button>
         </form>
 
-        <button id="reset-btn" class="play-sound00 reset-btn">トップへ</button>
+        <a href="{{ url_for('decks') }}" class="play-sound00 reset-btn">トップへ</a>
       </div>
     </div>
     
