--- a/templates/saved_sentences.html
+++ b/templates/saved_sentences.html
@@ -50,7 +50,7 @@
         </div>
         <!-- style="margin-top: 2rem;" -->
         <div class="buttons">
-            <button id="reset-btn" class="play-sound00 reset-btn">トップへ</button>
+            <a href="{{ url_for('decks') }}" class="play-sound00 reset-btn">トップへ</a>
         </div>
         <script src="{{ url_for('static', filename='script.js') }}"></script>
         <script src="{{ url_for('static', filename='hamburger.js') }}"></script>
