マージしたよ

--- a/templates/index.html
+++ b/templates/index.html
@@ -28,7 +28,7 @@
       </div>
     </div>
 
-    <h1 class="test-title">英単語テスト</h1>
+    <!-- <h1 class="test-title">英単語テスト</h1> -->
     <!-- <p>ようこそ、{{ current_user.username }}さん！</p> -->
     
     <div class="question-progress">
