--- a/templates/wrong_words.html
+++ b/templates/wrong_words.html
@@ -29,7 +29,9 @@
     </div>
 
     <div class="container">
+      {% if wrong_words %}
       <h1>間違えた単語リスト</h1>
+      {% endif %}
 
       <div class="wrong-words-list">
         {% if wrong_words %} {% for word, translation in wrong_words.items() %}
@@ -47,7 +49,9 @@
           >トップへ</a
         >
         <a href="/generate_sentence" class="button">例文生成</a>
-        <a href="{{ url_for('saved_sentences') }}" class="play-sound00 button">文章リスト</a>
+        <a href="{{ url_for('saved_sentences') }}" class="play-sound00 button"
+          >文章リスト</a
+        >
       </div>
     </div>
 
