正解pタグのスタイルを変更し、トップへの遷移ボタン以外も非表示になるよう変更

--- a/templates/wrong_words.html
+++ b/templates/wrong_words.html
@@ -40,7 +40,7 @@
           <div class="japanese">{{ translation }}</div>
         </div>
         {% endfor %} {% else %}
-        <p>おめでとう！全問正解です！</p>
+        <p class="perfect-score">おめでとう！全問正解です！</p>
         {% endif %}
       </div>
 
@@ -48,10 +48,12 @@
         <a href="{{ url_for('decks') }}" class="play-sound00 reset-btn"
           >トップへ</a
         >
+        {% if wrong_words %}
         <a href="/generate_sentence" class="button">例文生成</a>
         <a href="{{ url_for('saved_sentences') }}" class="play-sound00 button"
           >文章リスト</a
         >
+        {% endif %}
       </div>
     </div>
 
