--- a/static/saved_sentences.css
+++ b/static/saved_sentences.css
@@ -87,3 +87,16 @@ ul {
   text-align: left;
 }
 
+.delete-btn {
+  background: none;
+  border: none;
+  color: #9bcdf2;
+  cursor: pointer;
+  padding: 5px;
+  opacity: 0.7;
+  transition: opacity 0.2s;
+}
+
+.delete-btn:hover {
+  opacity: 1;
+}
