--- a/templates/deck_add.html
+++ b/templates/deck_add.html
@@ -19,6 +19,12 @@
     <link rel="icon" type="image/png" href="{{ url_for('static', filename='icons/favicon.png') }}" sizes="32x32">
     <link rel="icon" type="image/png" href="{{ url_for('static', filename='icons/favicon.png') }}" sizes="16x16">
     <link rel="apple-touch-icon" href="{{ url_for('static', filename='icons/favicon.png') }}">
+      <!-- ファビコンの定義 -->
+    <link rel="icon" type="image/png" href="/static/icons/favicon-32x32.png" sizes="32x32">
+    <link rel="icon" type="image/png" href="/static/icons/favicon-16x16.png" sizes="16x16">
+    <!-- ホーム画面への追加 -->
+    <link rel="apple-touch-icon"  href="/static/icons/apple-touch-icon.png" sizes="180x180">
+    <link rel="manifest" href="/static/icons/site.webmanifest">
   </head>
   <body>
     <div class="hamburger-menu">
