--- a/static/style.css
+++ b/static/style.css
@@ -244,7 +244,7 @@ h1 {
   justify-content: center;
   align-items: center;
   gap: 6px;
-  margin: 20px auto;
+  margin: 0 auto;
   font-size: 1.5rem;
   font-weight: 500;
   padding: 10px 16px;
