--- a/static/style.css
+++ b/static/style.css
@@ -759,3 +759,21 @@ h1 {
     font-size: 2.5rem;
   }
 }
+
+
+.main-title {
+  font-size: 6rem;
+  background: linear-gradient(90deg, #b690ff, #8cd8ff);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  font-weight: bold;
+  margin: 0;
+}
+
+.subtitle {
+  font-size: 1.5rem;
+  background: linear-gradient(90deg, #c68eff, #9be3ff);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  margin-top: 1rem;
+}
