細かい調整

--- a/templates/deck_detail.html
+++ b/templates/deck_detail.html
@@ -52,7 +52,7 @@
     <div class="container">
       <div class="deck-actions">
         <a href="{{ url_for('deck_test', deck_id=deck.id) }}" class="button"
-          >この単語帳でテストを開始</a
+          >この単語帳でテスト開始</a
         >
       </div>
 
