--- a/static/style.css
+++ b/static/style.css
@@ -632,7 +632,7 @@ h1 {
 /* ─────── ロゴリンク（左上固定） ───────────────── */
 .logo-link{
   position: absolute;
-  top: 0.25rem;
+  top: 0.5rem;
   left: 0.25rem;
 
   display: flex;
@@ -653,7 +653,7 @@ h1 {
 @media (max-width: 768px) {
   h1 {
     font-size: 2.5rem;
-    margin-top: 60px;
+    /* margin-top: 60px; */
     margin-bottom: 20px;
   }
 
