--- a/templates/wrong_words.html
+++ b/templates/wrong_words.html
@@ -63,7 +63,7 @@
           >トップへ</a
         >
         {% if wrong_words %}
-        <a href="/generate_sentence" class="button generate-sentence">例文生成</a>
+        <a href="/generate_sentence" class="button generate-sentence">例文作成</a>
         {% endif %}
       </div>
     </div>
