--- a/templates/deck_detail.html
+++ b/templates/deck_detail.html
@@ -71,8 +71,9 @@
         class="add-word-form"
       >
         <div class="form-group">
-          <label>単語: <input type="text" name="entry" required /></label>
-          <label>意味: <input type="text" name="meaning" required /></label>
+          <label>単語: <input type="text"  class="question-word1" name="entry" required /></label>
+          <button type="button" class="play-sound00 trans_button" id="translate-btn">和訳</button>
+          <label>意味: <input type="text" name="meaning" id="meaning-box" required /></label>
           <button type="submit" class="play-sound00 button">追加</button>
         </div>
       </form>
@@ -105,49 +106,6 @@
     ></audio>
     <script src="{{ url_for('static', filename='script.js') }}"></script>
     <script src="{{ url_for('static', filename='hamburger.js') }}"></script>
-    <script>
-      function deleteWord(deckId, wordId) {
-        fetch(`/deck/${deckId}/word/${wordId}/delete`, {
-          method: "POST",
-          headers: {
-            "Content-Type": "application/json",
-          },
-        })
-          .then((response) => response.json())
-          .then((data) => {
-            if (data.status === "success") {
-              // 成功した場合、該当の単語要素を削除
-              const wordElement = document.getElementById(`word-${wordId}`);
-              if (wordElement) {
-                wordElement.remove();
-              }
-            }
-          })
-          .catch((error) => {
-            console.error("Error:", error);
-          });
-      }
-
-      // 検索機能の実装
-      document.addEventListener("DOMContentLoaded", function () {
-        const searchInput = document.getElementById("wordSearch");
-        const wordItems = document.querySelectorAll(".word-item");
-
-        searchInput.addEventListener("input", function () {
-          const searchTerm = this.value.toLowerCase();
-
-          wordItems.forEach((item) => {
-            const english = item.dataset.english;
-            const japanese = item.dataset.japanese;
-
-            if (english.includes(searchTerm) || japanese.includes(searchTerm)) {
-              item.style.display = "flex";
-            } else {
-              item.style.display = "none";
-            }
-          });
-        });
-      });
-    </script>
+    <script src="{{ url_for('static', filename='addwords.js') }}"></script>
   </body>
 </html>
