gemini表記を削除

--- a/templates/deck_detail.html
+++ b/templates/deck_detail.html
@@ -79,7 +79,7 @@
       >
         <div class="form-group">
           <label>単語: <input type="text"  class="question-word1" name="entry" required placeholder="英単語を入力してEnterまたは他をクリック" /></label>
-          <label>意味: <input type="text" name="meaning" id="meaning-box" placeholder="自動翻訳されます（Gemini AI）" /></label>
+          <label>意味: <input type="text" name="meaning" id="meaning-box" placeholder="自動翻訳されます"/></label>
           <button type="submit" class="play-sound00 button">追加</button>
         </div>
       </form>
