--- a/static/API.css
+++ b/static/API.css
@@ -16,10 +16,11 @@
   }
 
   h1 {
+    margin: 8.0rem auto 1rem;
     text-align: center;
     color: white;
     font-size: 2.5rem;
-    margin-top: 70px;
+   
   }
 
   .section {
